--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
 .spin-button {
     width: 100%;
     padding: 20px;
-    background: #c44800;
+    background: #fc01ce;
     color: #000;
     border: 3px solid #000;
     border-radius: 10px;
